<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/btn_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingredients"
        android:textSize="30sp"
        android:textAllCaps="false"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="10dp"/>
    </android.support.v4.widget.NestedScrollView>
    <ListView
        android:id="@+id/lv_details_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>