<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Demo"
            android:textSize="50sp"
            android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>